--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -131,7 +131,7 @@
           <div class="flex-row flex-align-middle">
             <div class="flex-shrink flex-columns">
               <a class="navbar-logo" href="index.html">
-                <img src="images/techbook_logo.png" alt="Logo" />
+                <%= image_tag("techbook_logo.png", alt: "Logo") %>
               </a>
             </div>
             <div class="flex-columns">
@@ -392,23 +392,3 @@
 <div id="back-to-top">
    <a href="#"><i class="fa fa-angle-up"></i></a>
 </div>
-<!-- <script type="text/javascript" src="js/jquery-1.11.3.min.js"></script>
-<script type="text/javascript" src="js/jquery-migrate-1.2.1.min.js"></script> -->
-<script type="text/javascript" src="bootstrap/js/bootstrap.js"></script>
-<!-- <script type="text/javascript" src="js/jquery.waypoints.min.js"></script>
-<script type="text/javascript" src="js/jquery.easing.1.3.js"></script>
-<script type="text/javascript" src="js/SmoothScroll.min.js"></script>
-<script type="text/javascript" src="js/jquery.slicknav.min.js"></script>
-<script type="text/javascript" src="js/jquery.placeholder.min.js"></script>
-<script type="text/javascript" src="js/instagram.min.js"></script>
-<script type="text/javascript" src="js/spin.min.js"></script>
-<script type="text/javascript" src="js/jquery.introLoader.min.js"></script>
-<script type="text/javascript" src="js/select2.full.js"></script>
-<script type="text/javascript" src="js/jquery.responsivegrid.js"></script>
-<script type="text/javascript" src="js/ion.rangeSlider.min.js"></script>
-<script type="text/javascript" src="js/readmore.min.js"></script>
-<script type="text/javascript" src="js/slick.min.js"></script>
-<script type="text/javascript" src="js/validator.min.js"></script>
-<script type="text/javascript" src="js/jquery.raty.js"></script>
-<script type="text/javascript" src="js/customs.js"></script>
- -->
