--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -221,7 +221,7 @@
               <div class="package-grid-item">
                 <a href="detail-page.html">
                   <div class="image">
-                    <img src="images/books/book1.png" alt="Tour Package" />
+                    <%= image_tag("books/book1.png", alt: "Tour Package") %>
                     <div class="absolute-in-image">
                       <div class="duration"><span>デザイン</span></div>
                     </div>
@@ -245,7 +245,7 @@
               <div class="package-grid-item">
                 <a href="detail-page.html">
                   <div class="image">
-                    <img src="images/books/book2.png" alt="Tour Package" />
+                    <%= image_tag("books/book2.png", alt: "Tour Package") %>
                     <div class="absolute-in-image">
                       <div class="duration"><span>JAVA</span></div>
                     </div>
@@ -326,7 +326,7 @@
             <div class="col-xs-12 col-sm-12 col-md-6">
               <div class="testimonial-item clearfix">
                 <div class="image">
-                  <img src="images/testimonial-01.png" alt="yamane" />
+                  <%= image_tag("testimonial-01.png", alt: "yamane") %>
                 </div>
                 <div class="content">
                   <h4>山根祐亮</h4>
@@ -338,7 +338,7 @@
             <div class="col-xs-12 col-sm-12 col-md-6">
               <div class="testimonial-item clearfix">
                 <div class="image">
-                  <img src="images/testimonial-02.png" alt="maehira" />
+                  <%= image_tag("testimonial-02.png", alt: "maehira") %>
                 </div>
                 <div class="content">
                   <h4>前平亮祐</h4>
