--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -129,6 +129,12 @@
 
     <nav class="navbar navbar-primary navbar-fixed-top navbar-sticky-function">
       <div class="navbar-top">
+        <% if notice %>
+          <p class="alert alert-notice"><%= notice %></p>
+        <% end %>
+        <% if alert %>
+         <p class="alert alert-error"><%= alert %></p>
+        <% end %>
         <div class="container">
           <div class="flex-row flex-align-middle">
             <div class="flex-shrink flex-columns">
