--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -155,6 +155,7 @@
                         </a>
                         <ul class="dropdown-menu" aria-labelledby="language-dropdown">
                           <li><a href="#">マイページ</a></li>
+                          <li><%= link_to "本を売る",new_book_path %></li>
                           <li><%= link_to "ログアウト",destroy_user_session_path,method: :delete %></li>
                         </ul>
                       </li>
