トップページの出品物を表示

--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -154,7 +154,7 @@
                           <span class="caret"></span>
                         </a>
                         <ul class="dropdown-menu" aria-labelledby="language-dropdown">
-                          <li><a href="#">マイページ</a></li>
+                          <li><%= link_to "マイページ",user_path(current_user) %></li>
                           <li><%= link_to "本を売る",new_book_path %></li>
                           <li><%= link_to "ログアウト",destroy_user_session_path,method: :delete %></li>
                         </ul>
@@ -230,54 +230,36 @@
         </div>
         <div class="GridLex-gap-30-wrappper package-grid-item-wrapper">
           <div class="GridLex-grid-noGutter-equalHeight">
-            <div class="GridLex-col-3_sm-4_xs-12 mb-30">
-              <div class="package-grid-item">
-                <a href="detail-page.html">
-                  <div class="image">
-                    <%= image_tag("books/book1.png", alt: "Tour Package") %>
-                    <div class="absolute-in-image">
-                      <div class="duration"><span>デザイン</span></div>
-                    </div>
-                  </div>
-                  <div class="content clearfix">
-                    <h5>ランディングページメソッド・デザインメソッド</h5>
-                    <div class="rating-wrapper">
-                      <div class="raty-wrapper">
-                        <div class="star-rating-read-only" data-rating-score="4.0"></div> <span> / 7 review</span>
+            <% @books.each do |book| %>
+              <div class="GridLex-col-3_sm-4_xs-12 mb-30">
+                <div class="package-grid-item">
+                  <a href="detail-page.html">
+                    <div class="image">
+                      <%= image_tag("#{book.image}", alt: "Tour Package") %>
+                      <div class="absolute-in-image">
+                        <% book.tags.each do |tag| %>
+                          <div class="duration">
+                            <span><%= tag.name %></span>
+                          </div>
+                        <% end %>
                       </div>
                     </div>
-                    <div class="absolute-in-content">
-                      <span class="btn"><i class="fa fa-heart-o"></i></span>
-                      <div class="price">$1422</div>
-                    </div>
-                  </div>
-                </a>
-              </div>
-            </div>
-            <div class="GridLex-col-3_sm-4_xs-12 mb-30">
-              <div class="package-grid-item">
-                <a href="detail-page.html">
-                  <div class="image">
-                    <%= image_tag("books/book2.png", alt: "Tour Package") %>
-                    <div class="absolute-in-image">
-                      <div class="duration"><span>JAVA</span></div>
-                    </div>
-                  </div>
-                  <div class="content clearfix">
-                    <h5>すっきりわかるJAVA入門</h5>
-                    <div class="rating-wrapper">
-                      <div class="raty-wrapper">
-                        <div class="star-rating-read-only" data-rating-score="3.5"></div> <span> / 7 review</span>
+                    <div class="content clearfix">
+                      <h5><%= book.title %></h5>
+                      <div class="rating-wrapper">
+                        <div class="raty-wrapper">
+                          <div class="star-rating-read-only" data-rating-score="4.0"></div> <span> / 7 review</span>
+                        </div>
+                      </div>
+                      <div class="absolute-in-content">
+                        <span class="btn"><i class="fa fa-heart-o"></i></span>
+                        <div class="price">$<%= book.total_price(book) %></div>
                       </div>
                     </div>
-                    <div class="absolute-in-content">
-                      <span class="btn"><i class="fa fa-heart-o"></i></span>
-                      <div class="price">$1422</div>
-                    </div>
-                  </div>
-                </a>
+                  </a>
+                </div>
               </div>
-            </div>
+            <% end %>
           </div>
         </div>
       </div>
