--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -231,34 +231,7 @@
         <div class="GridLex-gap-30-wrappper package-grid-item-wrapper">
           <div class="GridLex-grid-noGutter-equalHeight">
             <% @books.each do |book| %>
-              <div class="GridLex-col-3_sm-4_xs-12 mb-30">
-                <div class="package-grid-item">
-                  <a href="detail-page.html">
-                    <div class="image">
-                      <%= image_tag("#{book.image}", alt: "Tour Package") %>
-                      <div class="absolute-in-image">
-                        <% book.tags.each do |tag| %>
-                          <div class="duration">
-                            <span><%= tag.name %></span>
-                          </div>
-                        <% end %>
-                      </div>
-                    </div>
-                    <div class="content clearfix">
-                      <h5><%= book.title %></h5>
-                      <div class="rating-wrapper">
-                        <div class="raty-wrapper">
-                          <div class="star-rating-read-only" data-rating-score="4.0"></div> <span> / 7 review</span>
-                        </div>
-                      </div>
-                      <div class="absolute-in-content">
-                        <span class="btn"><i class="fa fa-heart-o"></i></span>
-                        <div class="price">$<%= book.total_price(book) %></div>
-                      </div>
-                    </div>
-                  </a>
-                </div>
-              </div>
+             <%= render partial:"book", locals:{book: book} %>
             <% end %>
           </div>
         </div>
