出品した本のedit、destroy実装

--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -77,3 +77,9 @@
     color: #468847;
     text-align: left;
  }
+
+.destroy-button-custom{
+  margin-top:10px;
+  background-color:gray;
+  color: white;
+}
