--- a/app/views/books/_book.html.erb
+++ b/app/views/books/_book.html.erb
@@ -2,7 +2,7 @@
   <div class="package-grid-item">
     <a href="detail-page.html">
       <div class="image">
-        <%= image_tag("#{book.image}", alt: "Tour Package") %>
+        <%= link_to image_tag("#{book.image}"), book_path(book.id) %>
         <div class="absolute-in-image">
           <% book.tags.each do |tag| %>
             <div class="duration">
@@ -13,14 +13,14 @@
       </div>
       <div class="content clearfix">
         <h5><%= book.title %></h5>
-        <div class="rating-wrapper">
+<!--         <div class="rating-wrapper">
           <div class="raty-wrapper">
             <div class="star-rating-read-only" data-rating-score="4.0"></div> <span> / 7 review</span>
           </div>
-        </div>
+        </div> -->
         <div class="absolute-in-content">
           <span class="btn"><i class="fa fa-heart-o"></i></span>
-          <div class="price">$<%= book.total_price(book) %></div>
+          <div class="price"><%= book.total_price(book) %>円</div>
         </div>
       </div>
     </a>
