--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -2,12 +2,12 @@
 <!-- start Main Wrapper -->
 <div class="main-wrapper scrollspy-container">
   <!-- start end Page title -->
-  <div class="page-title" style="background-image:url('images/my_room.jpeg');">
+  <div class="page-title" style="background-image:url('/assets/my_room.jpeg');">
     <div class="container">
       <div class="row">
         <div class="col-sm-10 col-sm-offset-1 col-md-6 col-md-offset-3">
           <h2 class="text-white">せきやじょうじ</h2>
-          <div class="user-thumbnail mb-10" style="background-image:url('images/sekiya.jpeg');">
+          <div class="user-thumbnail mb-10" style="background-image:url('/assets/sekiya.jpeg');">
           <!-- <img src="images/books/book9.jpg" alt="" class="user-thumbnail"> -->
           </div>
         </div>
@@ -15,156 +15,7 @@
     </div>
   </div>
   <!-- end Page title -->
-  <div class="content-wrapper">
-    <div class="container">
-      <div class="row">
-        <div class="col-sm-8 col-md-8">
-          <div class="payment-box">
-            <div class="payment-header clearfix">
-              <h5 class="heading mt-0">購入者情報</h5>
-            </div>
-            <div class="payment-content">
-              <div class="payment-traveller mb-0">
-                <div class="form-horizontal">
-                  <div class="form-group gap-20">
-                    <label class="col-sm-4 col-md-4 control-label">姓</label>
-                    <div class="col-sm-8 col-md-6">
-                      <input type="text" class="form-control" value="せきや">
-                    </div>
-                  </div>
-                </div>
-                <div class="form-horizontal">
-                  <div class="form-group gap-20">
-                    <label class="col-sm-4 col-md-4 control-label">名</label>
-                    <div class="col-sm-8 col-md-6">
-                      <input type="text" class="form-control" value="じょうじ">
-                    </div>
-                  </div>
-                </div>
-                <div class="form-horizontal">
-                  <div class="form-group gap-20">
-                    <label class="col-sm-4 col-md-4 control-label">郵便番号:</label>
-                    <div class="col-sm-8 col-md-6">
-                      <input type="text" class="form-control" value="150-0042">
-                    </div>
-                  </div>
-                </div>
-                <div class="form-horizontal">
-                  <div class="form-group gap-20">
-                    <label class="col-sm-4 col-md-4 control-label">住所:</label>
-                    <div class="col-sm-8 col-md-6">
-                      <input type="text" class="form-control" value="東京都渋谷区道玄坂2丁目">
-                    </div>
-                  </div>
-                </div>
-              </div>
-              <div class="text-center">
-                <button class="btn btn-primary btn-sm btn-inverse">購入者情報の編集</button>
-              </div>
-            </div>
-          </div>
-          <div class="payment-box">
-            <div class="payment-header clearfix">
-              <h5 class="heading mt-0">登録情報</h5>
-            </div>
-            <div class="payment-content">
-              <div class="payment-traveller mb-0">
-                <div class="form-horizontal">
-                  <div class="form-group gap-20">
-                    <label class="col-sm-4 col-md-4 control-label">メールアドレス:</label>
-                    <div class="col-sm-8 col-md-6">
-                      <input type="email" class="form-control" value="jeorge_sekiya@hoge.com">
-                    </div>
-                  </div>
-                </div>
-                <div class="form-horizontal">
-                  <div class="form-group gap-20">
-                    <label class="col-sm-4 col-md-4 control-label">現在のパスワード:</label>
-                    <div class="col-sm-8 col-md-6">
-                      <input type="password" class="form-control" value="">
-                    </div>
-                  </div>
-                </div>
-                <div class="form-horizontal">
-                  <div class="form-group gap-20">
-                    <label class="col-sm-4 col-md-4 control-label">新しいパスワード:</label>
-                    <div class="col-sm-8 col-md-6">
-                      <input type="password" class="form-control" value="">
-                    </div>
-                  </div>
-                </div>
-              </div>
-              <div class="text-center">
-                <button class="btn btn-primary btn-sm btn-inverse">登録情報の編集</button>
-              </div>
-            </div>
-          </div>
-        </div>
 
-
-        <div class="col-sm-4 col-md-4 mt-50-xs">
-          <aside class="sidebar">
-            <div class="sidebar-inner no-border for-blog">
-              <div class="clear"></div>
-              <div class="sidebar-module">
-                <h4 class="sidebar-title">購入履歴</h4>
-                <div class="sidebar-module-inner">
-                  <ul class="sidebar-post">
-                    <li class="clearfix">
-                      <a href="blog-single.html">
-                        <div class="image">
-                          <img src="images/books/book1.png" alt="Popular Post" />
-                        </div>
-                        <div class="content">
-                          <h6>ランディングページ・デザインメソッド</h6>
-                          <p class="recent-post-sm-meta"><i class="fa fa-clock-o mr-5"></i>June 01, 2016</p>
-                        </div>
-                      </a>
-                    </li>
-                    <li class="clearfix">
-                      <a href="blog-single.html">
-                        <div class="image">
-                          <img src="images/books/book2.png" alt="Popular Post" />
-                        </div>
-                        <div class="content">
-                          <h6>すっきり分かるJAVA入門</h6>
-                          <p class="recent-post-sm-meta"><i class="fa fa-clock-o mr-5"></i>April 25, 2016</p>
-                        </div>
-                      </a>
-                    </li>
-                    <li class="clearfix">
-                      <a href="blog-single.html">
-                        <div class="image">
-                          <img src="images/books/book3.jpeg" alt="Popular Post" />
-                        </div>
-                        <div class="content">
-                          <h6>Learing PHP</h6>
-                          <p class="recent-post-sm-meta"><i class="fa fa-clock-o mr-5"></i>March 20, 2016</p>
-                        </div>
-                      </a>
-                    </li>
-                    <li class="clearfix">
-                      <a href="blog-single.html">
-                        <div class="image">
-                          <img src="images/books/book4.png" alt="Popular Post" />
-                        </div>
-                        <div class="content">
-                          <h6>パーフェクト Ruby on Rails</h6>
-                          <p class="recent-post-sm-meta"><i class="fa fa-clock-o mr-5"></i>March 05, 2016</p>
-                        </div>
-                      </a>
-                    </li>
-                  </ul>
-                </div>
-              </div>
-              <div class="clear"></div>
-            </div>
-          </aside>
-        </div>
-      </div>
-    </div>
-  </div>
-</div>
 <!-- end Main Wrapper -->
 
 <!-- start Back To Top -->
@@ -172,3 +23,56 @@
    <a href="#"><i class="fa fa-angle-up"></i></a>
 </div>
 <!-- end Back To Top -->
+
+
+<div class="clear"></div>
+<!-- start Main Wrapper -->
+  <div class="content-wrapper">
+    <div class="container">
+      <div class="row">
+        <div class="col-sm-8 col-md-9">
+          <div class="confirmation-wrapper">
+<!--             <div class="clearfix mb-20">
+              <div class="col-xs-8 col-md-4 pl-0">
+                <img src="/assets/books/book1.png" alt="">
+              </div>
+            </div> -->
+            <div class="confirmation-content">
+              <div class="section-title text-left">
+                <h4>登録情報</h4>
+              </div>
+              <ul class="book-sum-list">
+                <li><span class="font600">名前: </span><%= current_user.username %> 様</li>
+                <li><span class="font600">email: </span> <%= current_user.email %></li>
+                <li><span class="font600">お届け先郵便番号: </span> 150-0000</li>
+                <li><span class="font600">お届け先住所: </span>東京都渋谷区道玄坂２丁目新大宗ビル３号館８階</li>
+                <li><span class="font600">お支払金額合計: </span>1200円</li>
+              </ul>
+            </div>
+            <div class="text-right">
+            <button class="btn btn-primary btn-inverse">登録情報を編集する</button>
+          </div>
+          </div>
+        </div>
+<!--         <div class="col-sm-4 col-md-3 mt-50-xs">
+          <aside class="sidebar with-filter">
+            <div class="sidebar-inner">
+              <div class="sidebar-module">
+                <h4 class="heading mt-0">お問い合わせ</h4>
+                <div class="sidebar-module-inner">
+                  <p class="mb-10">東京都渋谷区道玄坂２丁目新大宗ビル３号館８階</p>
+                  <ul class="help-list">
+                    <li><span class="font600">電話番号</span>: 090-0000-0000</li>
+                    <li><span class="font600">Email</span>: support@tech-book.com</li>
+                    <li><span class="font600">Twitter</span>: @tech-book</li>
+                  </ul>
+                </div>
+              </div>
+            </div>
+          </aside>
+        </div> -->
+      </div>
+    </div>
+  </div>
+</div>
+
