--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -4,7 +4,8 @@
       <div class="row">
         <div class="col-xs-12 col-sm-5 col-md-3">
           <div class="footer-logo">
-            <%= image_tag("techbook_logo.png", alt: "Logo") %>
+            <!-- <%= image_tag("techbook_logo.png", alt: "Logo") %> -->
+            <%= link_to image_tag('techbook_logo.png', alt:"Logo"), root_path %>
           </div>
           <p class="footer-address">150-0000 東京都渋谷区道玄坂２丁目<br>新大宗ビル３号館８階<br/> <i class="fa fa-phone"></i> +66 28 878 5452 <br/> <i class="fa fa-phone"></i> +66 2 547 2223 <br/> <i class="fa fa-envelope-o"></i> <a href="#">support@techbook.com</a></p>
           <div class="footer-social">
