--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -58,7 +58,7 @@
                     <div class="form-group gap-20">
                       <label class="col-sm-4 col-md-4 control-label">住所:</label>
                       <div class="col-sm-8 col-md-6">
-                        <%= f.text_field :street_adress, class:"form-control" %>
+                        <%= f.text_field :street_address, class:"form-control" %>
                         <!-- <input type="text" class="form-control" value="東京都渋谷区道玄坂2丁目"> -->
                       </div>
                     </div>
