--- a/app/views/books/_book.html.erb
+++ b/app/views/books/_book.html.erb
@@ -4,11 +4,9 @@
       <div class="image">
         <%= link_to image_tag("#{book.image}"), book_path(book.id) %>
         <div class="absolute-in-image">
-          <% book.tags.each do |tag| %>
-            <div class="duration">
-              <span><%= tag.name %></span>
-            </div>
-          <% end %>
+          <div class="duration">
+            <span><%= book.category %></span>
+          </div>
         </div>
       </div>
       <div class="content clearfix">
