--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -75,14 +75,14 @@
     <div class="row">
       <div class="col-sm-8 col-md-6 col-sm-offset-2 col-md-offset-3">
         <div class="section-title">
-          <h3><%= current_user.username %>さんのお気に入り一覧</h3>
+          <h3>お気に入り一覧</h3>
           <p>お気に入りされた技術書の一覧です。</p>
         </div>
       </div>
     </div>
     <div class="GridLex-gap-30-wrappper package-grid-item-wrapper">
       <div class="GridLex-grid-noGutter-equalHeight">
-        <% @books.each do |book| %>
+        <% @favorite_books.each do |book| %>
           <%= render partial:"books/book", locals:{book: book} %>
         <% end %>
       </div>
@@ -93,14 +93,14 @@
     <div class="row">
       <div class="col-sm-8 col-md-6 col-sm-offset-2 col-md-offset-3">
         <div class="section-title">
-          <h3><%= current_user.username %>さんの購入一覧</h3>
+          <h3>購入一覧</h3>
           <p>購入された技術書の一覧です。</p>
         </div>
       </div>
     </div>
     <div class="GridLex-gap-30-wrappper package-grid-item-wrapper">
       <div class="GridLex-grid-noGutter-equalHeight">
-        <% @books.each do |book| %>
+        <% @bought_books.each do |book| %>
           <%= render partial:"books/book", locals:{book: book} %>
         <% end %>
       </div>
@@ -111,14 +111,14 @@
     <div class="row">
       <div class="col-sm-8 col-md-6 col-sm-offset-2 col-md-offset-3">
         <div class="section-title">
-          <h3><%= current_user.username %>さんの出品一覧</h3>
+          <h3>出品一覧</h3>
           <p>出品された技術書の一覧です。</p>
         </div>
       </div>
     </div>
     <div class="GridLex-gap-30-wrappper package-grid-item-wrapper">
       <div class="GridLex-grid-noGutter-equalHeight">
-        <% @books.each do |book| %>
+        <% @selled_books.each do |book| %>
           <%= render partial:"books/book", locals:{book: book} %>
         <% end %>
       </div>
