--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -88,6 +88,14 @@
   float: right;
   width:100px;
 }
+
 .likes_count{
   color:red;
+}
+
+.page-item{
+  width:500px;
+}
+.page-link{
+  width:100px;
 }
