--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -237,6 +237,9 @@
           </div>
         </div>
       </div>
+      <div class="text-center">
+        <%= paginate @books %>
+      </div>
     </section>
     <section class="overflow-hidden why-us-half-image-wrapper">
       <div class="GridLex-grid-noGutter-equalHeight">
